--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
     "framer-motion": "^12.23.22",
+    "maath": "^0.10.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
-    "swiper": "^12.0.3"
+    "swiper": "^12.0.3",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
