이메일전송기능 추가
Signed-off-by: 현재 <phyunjae7333@gmail.com>

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
     "framer-motion": "^12.23.22",
+    "lucide-react": "^0.554.0",
     "maath": "^0.10.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
